src/gap-genius.less
.EP_Educandu_Gap_Genius_Display {

  .footnote-content {
    margin-top: 0;
    margin-left:10px;
    font-size: 0.8em;
    line-height: initial;
  }

}

.EP_Educandu_Gap_Genius_Editor {

  // @edu-disabled-color: #E6E6E6;
  // @edu-error-color: #B02E0C;
  .ant-input-outlined.ant-input-disabled,
  .ant-input-outlined[disabled] {
    color: #DB6F6F !important;
  }
  
  .messageArea {
    color: @edu-success-color;
    font-weight: bold;
  }

  .antFlex {
    max-width: 100%;    
  }
  
  .antBtn {
    width: 30% !important;
  }

  .antBtn span {
    white-space: nowrap !important;
    overflow: hidden !important;
    text-overflow: ellipsis !important;
  }

  .editable-input-container {
    
  }

  .editable-input  { }

  .customSwitch {
    background-color: @edu-primary-color-light !important;
  }  
  .customSwitch:hover {
    background-color: @edu-primary-color-dark !important;
  }

}

